--- a/index.css
+++ b/index.css
@@ -1,3 +1,22 @@
 body {
   font-family: Cormorant, serif;
 }
+
+h1 {
+  display: inline-block;
+}
+
+.links {
+  display: inline-block;
+}
+
+.links li {
+  display: inline-block;
+}
+
+.links a {
+  margin: 0 8px;
+  color: black;
+  font-size: 20px;
+  text-decoration: none;
+}
