finish up the navbar

--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ body {
 
 h1 {
   display: inline-block;
+  margin: 0 32px 0 0;
+  font-weight: 400;
 }
 
 .links {
@@ -19,4 +21,16 @@ h1 {
   color: black;
   font-size: 20px;
   text-decoration: none;
+}
+
+.links ul {
+  padding: 0;
+}
+
+.navbar {
+  margin: 32px;
+}
+
+a.active {
+  border-bottom: 1px solid black;
 }
