create the photo grid

--- a/index.css
+++ b/index.css
@@ -34,3 +34,19 @@ h1 {
 a.active {
   border-bottom: 1px solid black;
 }
+
+.card {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 49.75%;
+  padding: 16px;
+}
+
+.card img {
+  width: 100%;
+  height: 500px;
+}
+
+.card h2 {
+  display: inline-block;
+}
