--- a/index.css
+++ b/index.css
@@ -35,6 +35,10 @@ a.active {
   border-bottom: 1px solid black;
 }
 
+.gallery {
+  padding: 16px;
+}
+
 .card {
   display: inline-block;
   box-sizing: border-box;
@@ -45,8 +49,11 @@ a.active {
 .card img {
   width: 100%;
   height: 500px;
+  object-fit: cover;
 }
 
 .card h2 {
   display: inline-block;
+  margin: 8px 0 16px 0;
+  font-weight: 400;
 }
